--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Edu+QLD+Beginner&family=Josefin+Sans:wght@300&family=Montserrat:ital,wght@0,400;0,700;1,200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <link rel="stylesheet" href="./my-app/src/App.js">
    
     <title>Fútbol interno CARP</title> 
 
